shit, lnk1811 cannot find ecl.lib
ecl.lib in the %PATH%

--- a/cl/hi/Makefile
+++ b/cl/hi/Makefile
@@ -6,8 +6,12 @@ hi: ecl-make.lisp
 clean:
 	test ! -f hi || rm hi
 	test ! -f hi.fasb || rm hi.fasb
+	test ! -f ecl.lib || rm ecl.lib
+	test ! -f proghi.exe.exp || rm proghi.exe.exp
+	test ! -f proghi.exe.lib || rm proghi.exe.lib
 
 test: hi
 	./$^
+
 
 .PHONY: clean test
