--- a/cl/hi/Makefile
+++ b/cl/hi/Makefile
@@ -10,7 +10,7 @@ hi_dep := hi.asd \
           package.lisp \
           hi.lisp
 
-hi_bin: $(cli)-make.lisp $(hi_dep)
+$(hi_bin): $(cli)-make.lisp $(hi_dep)
 	$(cli) --load $<
 
 clean:
@@ -20,9 +20,9 @@ clean:
 	@test ! -f proghi.exe.exp || rm proghi.exe.exp
 	@test ! -f proghi.exe.lib || rm proghi.exe.lib
 
-test: hi_bin
+test: $(hi_bin)
 	$(CURDIR)/$(hi_bin)
 
-default: hi_bin
+default: $(hi_bin)
 
 .PHONY: default clean test
