--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ bin
 **/*.exe
 **/cl/standalone/app
 **/*.fasb
-**/arlo/arlo.exe
-**/arlo/arlo
+**/rocks/rocks
+**/rocks/rocks.exe
 **/hi/hi.exe
 **/hi/hi
