build for shared library

--- a/gambitc/shared/Makefile
+++ b/gambitc/shared/Makefile
@@ -1,7 +1,7 @@
 # mix: c and scheme
 
 
-ifeq ($(OS), Darwin)
+ifeq ($(shell uname), Darwin)
 	mix_lib := mix.dylib
 	shared_opt := -dynamiclib
 	mix_bin := mix
@@ -19,12 +19,9 @@ gsc := gambitc
 mixlib.c: m1.c m2.scm
 	$(gsc) -verbose -link -o $@ m2
 
-mix_obj := m1.o m2.o mixlib.o
-$(mix_obj): m1.c m2.c mixlib.c
-	$(gsc) -verbose -obj -cc-options "-D___SHARED" $^
-
-$(mix_lib): $(mix_obj)
-	$(CC) $(shared_opt) $^ -o $@
+$(mix_lib): mixlib.c
+	$(gsc) -verbose -obj -cc-options "-D___SHARED" m1.c m2.c $<
+	$(CC) $(shared_opt) m1.o m2.o mixlib.o -o $@
 
 clean:
 	$(RM) $(mix_lib)
