gambitc: control flow graph

--- a/gambitc/hi/Makefile
+++ b/gambitc/hi/Makefile
@@ -1,6 +1,9 @@
 # gambitc hi
 
 hi_bin := hi.out
+hi_cfg := hi.cfg
+hi_cfg_pdf := hi.cfg.pdf
+
 ifeq ($(OS), Windows_NT)
 	hi_bin := hi.exe
 endif
@@ -8,13 +11,18 @@ endif
 gsc := gambitc
 
 $(hi_bin): hi.scm
-	$(gsc) -exe -o $(hi_bin) $<
+	$(gsc) -exe -cfg -o $@ $<
 
 clean:
 	test ! -f $(hi_bin) || rm $(hi_bin)
+	test ! -f $(hi_cfg) || rm $(hi_cfg)
+	test ! -f $(hi_cfg_pdf) || rm $(hi_cfg_pdf)
 
 test: $(hi_bin)
 	$(CURDIR)/$(hi_bin)
+
+pdf: $(hi_bin)
+	dot -O -Tpdf $(hi_cfg)
 
 default: $(hi_bin)
 
