gambitc/mix: VERBOSE

--- a/gambitc/mix/Makefile
+++ b/gambitc/mix/Makefile
@@ -1,4 +1,9 @@
 # mix: c and scheme
+#
+# make clean test
+# GAMBCOMP_VERBOSE=yes make clean test
+# VERBOSE=1 make clean test
+#
 
 mix_bin := mix.out
 ifeq ($(OS), Windows_NT)
@@ -6,22 +11,27 @@ ifeq ($(OS), Windows_NT)
 endif
 
 gsc := gambitc
+gsc_opt :=
+ifeq ($(shell test -n "$(VERBOSE)" && test $(VERBOSE) -gt 0; echo $$?),0)
+	gsc_opt := -verbose
+endif
+
 
 m2.c: m2.scm
-	$(gsc) -verbose -c $<
+	$(gsc) $(gsc_opt) -c $<
 
 m3.c: m3.scm
-	$(gsc) -verbose -c $<
+	$(gsc) $(gsc_opt) -c $<
 
 m3_.c: m2.c m3.c
-	$(gsc) -verbose -link $^
+	$(gsc) $(gsc_opt) -link $^
 
 mix_obj := m1.o m2.o m3.o m3_.o
 $(mix_obj): m1.c m2.c m3.c m3_.c
-	$(gsc) -verbose -obj $^
+	$(gsc) $(gsc_opt) -obj $^
 
 $(mix_bin): $(mix_obj)
-	$(gsc) -verbose -o $@ -exe $^
+	$(gsc) $(gsc_opt) -o $@ -exe $^
 
 clean:
 	$(RM) $(mix_bin)
