gambitc/mix: shared library on Darwin

--- a/gambitc/mix/Makefile
+++ b/gambitc/mix/Makefile
@@ -17,6 +17,7 @@ LD_LIBRARY_PATH := LD_LIBRARY_PATH=$(CURDIR)
 ifeq ($(shell uname), Darwin)
 	mix_lib_out := libmix.dylib
 	mix_lib_opt := -dynamiclib
+	LDLIBS += -lmix
 else ifeq ($(OS), Windows_NT)
 	mix_bin_out := mix.exe
 	mix_lib_out := libmix.lib
