--- a/gambitc/mix/Makefile
+++ b/gambitc/mix/Makefile
@@ -11,13 +11,13 @@ mix_lib_c_out := mixc
 mix_lib_opt := -shared -fPIC
 
 LDFLAGS += -L$(CURDIR)
-LDLIBS += -lmix -lm -ldl -lutil -lssl -lpthread -lcrypto
+LDLIBS = -lmix -lm -ldl -lutil -lssl -lpthread -lcrypto
 LD_LIBRARY_PATH := LD_LIBRARY_PATH=$(CURDIR)
 
 ifeq ($(shell uname), Darwin)
 	mix_lib_out := libmix.dylib
 	mix_lib_opt := -dynamiclib
-	LDLIBS += -lmix
+	LDLIBS = -lmix
 else ifeq ($(OS), Windows_NT)
 	mix_bin_out := mix.exe
 	mix_lib_out := libmix.lib
